Bug 1556786 - Fix header box alignment in day and week views. r=mkmelin

--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -288,7 +288,6 @@ calendar-header-container[weekend="true"][selected="true"],
     border-bottom: 2px solid var(--viewBorderColor);
     border-right: 1px solid var(--viewBorderColor);
     margin-inline-end: 1px;
-    margin-inline-start: -1px;
 }
 
 .multiday-view-header-time-spacer[orient="vertical"] {
@@ -298,7 +297,6 @@ calendar-header-container[weekend="true"][selected="true"],
 .multiday-view-label-box[orient="horizontal"] > .multiday-view-label-time-spacer {
     border-right: 1px solid var(--viewBorderColor);
     margin-inline-end: 1px;
-    margin-inline-start: -1px;
 }
 
 .multiday-view-header-day-box[orient="horizontal"] {
